--- a/fitness/templates/fitness/home.html
+++ b/fitness/templates/fitness/home.html
@@ -11,6 +11,18 @@
     <h2><a href="{% url 'gym:create_gym' %}">Create a gym!</a></h2>
     {% endif %}
 
+
+{% elif user.is_authenticated and user.user_type == 'FitGuildOfficer' and user.gym %}
+<h3>Hello FitGuildOfficer {{ user.username }}</h3>
+<h3>Your Gym Name is: {{ user.gym.name }}</h3>
+<h3>Your Gym Code is: {{ user.gym.join_code }}</h3>
+    
+{% elif user.is_authenticated and user.user_type == 'FitKnight' %}
+<h3>Hello FitKnight {{ user.username }}</h3>
+    {% if user.is_authenticated and user.user_type == 'FitKnight' and user.gym %}
+    <h3>Your Gym Name is: {{ user.gym.name }}</h3>
+    {% endif %}
+    
 {% else %}
 <h2> Hello There! </h2>
 
