--- a/gym/templates/gym/base.html
+++ b/gym/templates/gym/base.html
@@ -1,5 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <link rel="stylesheet" type="text/css" href="{% static 'fitness/style.css' %}">
+    </head>
     <body> 
 
         <a href="{% url 'fitness:home' %}" class="button">Home</a>
