--- a/exercises/templates/exercises/search_exercises.html
+++ b/exercises/templates/exercises/search_exercises.html
@@ -1,6 +1,11 @@
+<!-- Designed by ____ on February __ -->
+<!-- Modified by Brendon Wolfe for CSS compatibility on February 16th -->
+ 
 {% extends 'gym/base.html' %}
+{%load static %}
 
 {% block content %}
+<link rel="stylesheet" type="text/css" href="{% static 'exercises/search_exercises.css' %}">
 
 <h1>Search Exercises</h1>
 
@@ -15,15 +20,17 @@
     <button type="submit">Search</button>
 </form>
 
-<ul>
-{% for exercise_id, exercise_name in exercises %}
-    <li>
-        <a href="{% url 'exercises:view_exercise' exercise_id %}">
-        {{exercise_name}}
-        </a>
-    </li>
-{% endfor %}
-</ul>
+<div class="list-div">
+    <ul>
+    {% for exercise_id, exercise_name in exercises %}
+        <li>
+            <a href="{% url 'exercises:view_exercise' exercise_id %}">
+            {{exercise_name}}
+            </a>
+        </li>
+    {% endfor %}
+    </ul>
+</div>
 
 {% if user.is_authenticated and user.user_type == 'FitGuildOfficer' %}
 <h2><a href="{% url 'exercises:create_exercise' %}">Add an exercise!</a></h2>
