--- a/fitness/static/fitness/style.css
+++ b/fitness/static/fitness/style.css
@@ -1,3 +1,5 @@
+/* Designed by Brendon Wolfe on February 17th */
+
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
 body {
