--- a/gym/static/gym/createGym.css
+++ b/gym/static/gym/createGym.css
@@ -1,3 +1,6 @@
+/* Designed by Brendon Wolfe on February 10th */
+/* Modified by Brendon Wolfe for responsive design on February 17th */
+
 /* This imports our text's font from Google */
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
