--- a/fitness/templates/fitness/home.html
+++ b/fitness/templates/fitness/home.html
@@ -2,7 +2,6 @@
 
 {% block content%}
 
-<h1> Hello World </h1>
 {% if user.gym is None and user.is_authenticated %}
 
 <h2><a href="{% url 'gym:join_gym' %}">Join a gym!</a></h2>
@@ -13,11 +12,12 @@
 
 
 {% elif user.is_authenticated and user.user_type == 'FitGuildOfficer' and user.gym %}
-<h2><a href="{% url 'gym:list_applications' %}">View Applications</a></h2>
-<h2><a href="{% url 'fitness:search_knights' %}">Search Knights</a></h2>
+
 <h3>Hello FitGuildOfficer {{ user.username }}</h3>
 <h3>Your Gym Name is: {{ user.gym.name }}</h3>
 <h3>Your Gym Code is: {{ user.gym.join_code }}</h3>
+<h2><a href="{% url 'gym:list_applications' %}">View Your Gym's Applications</a></h2>
+<h2><a href="{% url 'fitness:search_knights' %}">Search Knights</a></h2>
     
 {% elif user.is_authenticated and user.user_type == 'FitKnight' %}
 <h3>Hello FitKnight {{ user.username }}</h3>
