--- a/gym/templates/gym/applications.html
+++ b/gym/templates/gym/applications.html
@@ -1,7 +1,7 @@
 <!--Designed by Joseph Marchione and Brendon Wolfe on February 11th-->
 <!--Modified by ___ on February __-->
 
-{% extends 'gym/base.html' %}
+{% extends 'gym/header.html' %}
 {% load static %}
 
 {% block content %}
