--- a/exercises/templates/exercises/create_exercise.html
+++ b/exercises/templates/exercises/create_exercise.html
@@ -11,11 +11,20 @@
 
 <form method="POST" class="create-exercise-form">
     {% csrf_token %}
-    <label for="id_exercise_name">Exercise Name:</label>
-    <input type="text" name="exercise_name" maxlength="255" required id="id_exercise_name">
-
-    <label for="id_exercise_description">Instructions:</label>
-    <input type="text" name="description" maxlength="511" required id="id_exercise_description">
+    <p>
+        <label for="id_exercise_name">Exercise Name:</label>
+        <input type="text" name="exercise_name" maxlength="255" required id="id_exercise_name">
+    </p>
+    
+    <p>
+        <label for="id_exercise_description">Instructions:</label>
+        <textarea type="text" name="description" maxlength="511" required id="id_exercise_description"></textarea>
+    </p>
+    
+    <p>
+        <label for="id_video_link">Video Link:</label>
+        <input type="text" name="video_link" id="id_video_link">
+    </p>
 
     <button type="submit">Create</button>
 </form>
