--- a/exercises/static/exercises/search_exercises.css
+++ b/exercises/static/exercises/search_exercises.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
 h1 {
-    color: #39FF14; 
+    color: #ffdd57; 
     text-align: center;
     font-size: 2rem;
 }
