Header updates and minor file structure changes.

--- a/exercises/templates/exercises/search_exercises.html
+++ b/exercises/templates/exercises/search_exercises.html
@@ -1,7 +1,7 @@
 <!-- Designed by ____ on February __ -->
 <!-- Modified by Brendon Wolfe for CSS compatibility on February 16th -->
 
-{% extends 'gym/header.html' %}
+{% extends 'fitness/header.html' %}
 {%load static %}
 
 {% block content %}
