--- a/exercises/templates/exercises/view_exercise.html
+++ b/exercises/templates/exercises/view_exercise.html
@@ -1,7 +1,7 @@
 <!-- Designed by ____ on February ____ -->
 <!-- Modified by Brendon Wolfe on February 21st to handle photos -->
 
-{% extends 'gym/header.html' %}
+{% extends 'fitness/header.html' %}
 {% load static %}
 
 {% block content %}
