--- a/fitness/static/fitness/header.css
+++ b/fitness/static/fitness/header.css
@@ -10,7 +10,7 @@ body {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     border-bottom: 1px solid #39FF14; 
     padding: 1rem;
@@ -21,39 +21,13 @@ body {
     width: 100%;
 }
 
-.left {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start; 
-    width: 42%;
+.header h2 {
+    font-size: 1rem;
+    margin: 0;
 }
 
 .logo {
-    font-size: 1.8rem;
-    margin-left: 1rem;
-    font-weight: bold;
-    width: 10%;
-    margin: -1rem 0rem;
-}
-
-.logo h1 {
-    color:#39FF14;
-    margin: 0rem;  
-    font-size: 3rem;  
-}
-
-.right {
-    display: flex;
-    align-items: center; 
-    justify-content: flex-end; 
-    width: 42%;
-}
-
-.authentication {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 45%;
+    width: 5%;
 }
 
 
@@ -83,3 +57,27 @@ body {
     margin-top:1.5rem;
     padding-bottom: 3rem;
 }
+
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 13%;
+    left: 82%;
+    width: 5rem;
+    background: #181818;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    border-radius: 10px;
+    z-index: 1000;
+}
+
+.profile{
+    cursor: pointer;
+}
+
+.profile:hover{
+    color:aqua;
+}
+
+
