--- a/fitness/static/fitness/header.css
+++ b/fitness/static/fitness/header.css
@@ -1,4 +1,5 @@
 /* Designed by Brendon Wolfe on February 17th */
+/* Updated by Brendon Wolfe on March 2nd */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
@@ -6,6 +7,7 @@ body {
     background-color: #282828; 
     color: white; 
     font-family: "Rajdhani", sans-serif;
+    margin: 0;
 }
 
 .header {
@@ -13,12 +15,11 @@ body {
     justify-content: space-evenly;
     align-items: center;
     border-bottom: 1px solid #39FF14; 
-    padding: 1rem;
-    margin: -1.5rem -1.75rem;
     background-color: #181818; 
     margin-bottom: 1rem;
     position: fixed;
     width: 100%;
+    top: 0;
 }
 
 .header h2 {
@@ -27,9 +28,26 @@ body {
 }
 
 .logo {
-    width: 5%;
+    max-height: 100%;
+    max-width: 100%;
 }
 
+.logoDiv{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 15%;
+    height: 10vh;
+}
+
+.buttonDiv{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 70%;
+    margin: 0 1rem;
+    height: 12vh;
+}
 
 .button {
     background-color: #39FF14; 
@@ -47,30 +65,69 @@ body {
     background-color: #28a828; 
 }
 
-.username {
-    font-weight: bold;
-    margin-left: 1rem;
-    color: #39FF14; 
-}
-
 .header-space{
-    margin-top:1.5rem;
-    padding-bottom: 3rem;
+    margin-top:1vh;
+    padding-bottom: 9vh;
 }
-
 
 .popup {
     display: none;
     position: fixed;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
     top: 13%;
-    left: 82%;
+    left: 85%;
     width: 5rem;
+    height: 18%;
     background: #181818;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     padding: 1rem;
     border-radius: 10px;
     z-index: 1000;
+    box-shadow: 0rem 0rem 1rem rgb(55, 255, 25);
 }
+
+
+.popup .username {
+    font-weight: bold;
+    color: #ffdd57; 
+    margin-bottom: 0.4rem;
+    font-size: 1.2rem;
+}
+
+.popup .button {
+    display: block;
+    width: 8vw;
+    padding: 0.5rem;
+    margin: 0.3rem 0;
+    text-align: center;
+    background-color: #39FF14;
+    color: black;
+    font-weight: bold;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+}
+
+.popup .button:hover {
+    background-color: #28a828;
+}
+
+.popup form {
+    margin: 0;
+}
+
+.popup form .button {
+    background-color: red;
+    color: white;
+}
+
+.popup form .button:hover {
+    background-color: #cc0000;
+}
+
 
 .profile{
     cursor: pointer;
