--- a/fitness/static/fitness/home.css
+++ b/fitness/static/fitness/home.css
@@ -2,12 +2,69 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
-/* 
-TODO: For this home page I want to create a side bar 
-TODO: This will contain the profile button, the search exercise button
-? Maybe combine the search knights and applications page. use scrollable elements to avoid pages getting too long
-? Remove the logout button, add it to a popup from clicking the user's name
-? profile page will contain a logout button but the user's name is the quick logout option
-? put leaderboard where login button is located
-*/
+body {
+    font-family: 'Rajdhani', sans-serif;
+    background-color: #121212;
+    color: #f5f5f5;
+    overflow: hidden; 
+    margin: 0;
+}
 
+
+.container {
+    display: flex;
+    flex-grow: 1;
+    height: 90vh;
+}
+
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 20%;
+    background-color: #232323;
+    padding: 1rem;
+    border-right: 2px solid #39FF14;
+    height: 100%;
+}
+
+.sidebar h2, .sidebar h3 {
+    text-align: center;
+    color: #ffdd57;
+    margin: 0.5rem 0;
+}
+
+.sidebar a {
+    display: block;
+    text-align: center;
+    padding: 0.8rem;
+    margin: .8vh 0;
+    background-color: #39FF14;
+    color: #121212;
+    font-weight: bold;
+    border-radius: 0.3rem;
+    text-decoration: none;
+    font-size: 1.1rem;
+    width: 80%;
+    height: auto;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.sidebar a:hover {
+    background-color: #2ECC71;
+}
+
+.greeting, .gymName, .gymCode {
+    font-size: 1.2rem;
+    color: #ffdd57;
+}
+
+.screen {
+    width: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #181818;
+    height: 100%;
+}
