(incomplete) added mechanism to assign and view tasks

--- a/fitness/templates/fitness/view_current_tasks.html
+++ b/fitness/templates/fitness/view_current_tasks.html
@@ -24,7 +24,7 @@
     <ul>
     {% for task_id, task_name in task_rows %}
         <li>
-            <a href="{% url 'fitness:task_details' task_id %}">
+            <a href="{% url 'fitness:task_details' task_pk=task_id %}">
             {{task_name}}
             </a>
         </li>
