--- a/exercises/static/exercises/search_exercises.css
+++ b/exercises/static/exercises/search_exercises.css
@@ -3,7 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;700&display=swap');
 
 h1 {
-    color: #ffdd57; 
+    color: #ffdd57;
+    text-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
     text-align: center;
     font-size: 2rem;
 }
@@ -16,7 +17,7 @@ h2 {
 
 ul {
     width: fit-content;
-    background-color: #181818;
+    background-color: #282828;
     max-width: 25rem;
     padding: 1.5rem 4.5rem;
     box-shadow: 0rem 0rem 1rem rgb(55, 255, 25);
@@ -102,6 +103,20 @@ ul li a:hover{
 
 .footer a:hover {
     color: #7040a0;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #181818;
+    height: 100%;
+    width: 60%;
+    margin-left: 20%;
+    margin-top: 2%;
+    border-radius: 50px;
+    padding-bottom: 1rem;
 }
 
 @media screen and (max-width: 600px) {
