--- a/exercises/templates/exercises/search_exercises.html
+++ b/exercises/templates/exercises/search_exercises.html
@@ -7,34 +7,36 @@
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{% static 'exercises/search_exercises.css' %}">
 
-<h1>Search Exercises</h1>
+<div class="container">
+    <h1>Search Exercises</h1>
 
-<div class='error-message'>
-    <p>{{ error }} </p>
+    <div class='error-message'>
+        <p>{{ error }} </p>
+    </div>
+
+
+    <form method="GET" class="search-exercises-form">
+        <label for="id_exercise_name">Exercise Name:</label>
+        <input type="text" name="exercise_name" value="{{ search_query }}" maxlength="255" id="id_exercise_name">
+        <button type="submit">Search</button>
+    </form>
+
+    <div class="list-div">
+        <ul>
+        {% for exercise_id, exercise_name in exercises %}
+            <li>
+                <a href="{% url 'exercises:view_exercise' exercise_id %}">
+                {{exercise_name}}
+                </a>
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
+
+    {% if user.is_authenticated and user.user_type == 'FitGuildOfficer' %}
+    <h2><a href="{% url 'exercises:create_exercise' %}">Add an exercise!</a></h2>
+    {% endif %}
 </div>
-
-
-<form method="GET" class="search-exercises-form">
-    <label for="id_exercise_name">Exercise Name:</label>
-    <input type="text" name="exercise_name" value="{{ search_query }}" maxlength="255" id="id_exercise_name">
-    <button type="submit">Search</button>
-</form>
-
-<div class="list-div">
-    <ul>
-    {% for exercise_id, exercise_name in exercises %}
-        <li>
-            <a href="{% url 'exercises:view_exercise' exercise_id %}">
-            {{exercise_name}}
-            </a>
-        </li>
-    {% endfor %}
-    </ul>
-</div>
-
-{% if user.is_authenticated and user.user_type == 'FitGuildOfficer' %}
-<h2><a href="{% url 'exercises:create_exercise' %}">Add an exercise!</a></h2>
-{% endif %}
 
 
 <div class="footer">
