--- a/fitness/static/fitness/header.css
+++ b/fitness/static/fitness/header.css
@@ -61,6 +61,17 @@ body {
     cursor: pointer;
 }
 
+.profileButton {
+    background-color: #39FF14; 
+    color: black; 
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    border: none;
+    cursor: pointer;
+}
+
 .button:hover {
     background-color: #28a828; 
 }
@@ -75,7 +86,7 @@ body {
     position: fixed;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     top: 13%;
     left: 85%;
     width: 5rem;
@@ -92,6 +103,7 @@ body {
 .popup .username {
     font-weight: bold;
     color: #ffdd57; 
+    text-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
     margin-bottom: 0.4rem;
     font-size: 1.2rem;
 }
