--- a/fitness/static/fitness/home.css
+++ b/fitness/static/fitness/home.css
@@ -32,6 +32,7 @@ body {
 .sidebar h2, .sidebar h3 {
     text-align: center;
     color: #ffdd57;
+    text-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
     margin: 0.5rem 0;
 }
 
@@ -67,4 +68,12 @@ body {
     justify-content: center;
     background-color: #181818;
     height: 100%;
+}
+
+.leaderboard{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 80%;
 }
