--- a/fitness/templates/fitness/header.html
+++ b/fitness/templates/fitness/header.html
@@ -17,7 +17,7 @@
             </div>
             <div class="buttonDiv">
                 <h2><a href="{% url 'fitness:home' %}" class="button">Home</a></h2>
-                <h2><a href="{% url 'exercises:search_exercises' %}" class="button">Search Exercises</a></h2>
+                <h2><a href="{% url 'exercises:search_exercises' %}" class="button">Exercises</a></h2>
                 {% if user.is_authenticated and user.user_type == 'FitKnight' %}
                     <h2><a class="button">Inventory</a></h2>
                 {% endif %}
@@ -25,8 +25,7 @@
                 <h2><a class="button js-profile">Profile</a></h2>
                 <div class="popup" id="js-popup">
                     <h2 class="username">{{ user.username }}</h2>
-                    <a class="button">Profile</a>
-                    
+                    <h2><a href="{% url 'fitness:profile' %}" class="profileButton">Profile</a></h2>
                     <form action="{% url 'gym:logout' %}" method="POST">
                         {% csrf_token %}
                         <button type="submit" class="button">Logout</button>
