--- a/fitness/templates/fitness/view_current_tasks.html
+++ b/fitness/templates/fitness/view_current_tasks.html
@@ -1,7 +1,8 @@
 {% extends 'fitness/header.html' %}
-
-
+{% load static %}
 {% block content%}
+<link rel="stylesheet" type="text/css" href="{% static 'fitness/view_current_tasks.css' %}">
+
 
     <div class='error-message'>
         <p>{{ error }} </p>
