--- a/gym/static/gym/applications.css
+++ b/gym/static/gym/applications.css
@@ -7,6 +7,7 @@
 h1 {
     text-align: center;
     color: #ffdd57;
+    text-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
     margin: 1.25rem 0;
 }
 
@@ -26,6 +27,7 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    min-width: 25rem;
 }
 
 .applicant-name {
@@ -71,5 +73,19 @@ h1 {
     color: red;
     margin-top: 3rem;
     font-size: 1.2rem;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #181818;
+    height: 100%;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 2%;
+    border-radius: 50px;
+    padding-bottom: 1rem;
 }
 
