--- a/gym/static/gym/search_knights.css
+++ b/gym/static/gym/search_knights.css
@@ -5,6 +5,7 @@
 h1 {
     text-align: center;
     color: #ffdd57;
+    text-shadow: 2px 2px 10px rgba(255, 221, 87, 0.8);
     margin: 1.25rem 0;
 }
 
@@ -107,4 +108,18 @@ h1 {
 
 .footer a:hover {
     color: #7040a0;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #181818;
+    height: 100%;
+    width: 60%;
+    margin-left: 20%;
+    margin-top: 2%;
+    border-radius: 50px;
+    padding-bottom: 1rem;
 }
